# BachelorThesis

./: .gitignore  .gitmodules  README.md  pyproject.toml  test.py
lib/: __init__.py  data.py  font.py  map.py  read_micaps.py
lib/draw/: __init__.py  p2_2_and_p4_11_to_p4_12.py  p4_1_to_p4_4.py  p4_5_to_p4_7.py  p4_8_to_p4_10.py
lib/era5/: __init__.py  gp_download.py  single_level_download.py  single_station_download.py
